--- a/uebung5/zettel5.tex
+++ b/uebung5/zettel5.tex
@@ -25,7 +25,7 @@
 \renewcommand{\arraystretch}{1.5}
 
 \title{Datenbanken: Übungsblatt 5}
-\author{Florian Rauls, \textbf{Christian Heusel}, Philipp Göldner}
+\author{$\bigl($Florian Rauls, \textbf{Christian Heusel}, Philipp Göldner$\bigr)$ (Gruppe 1)}
 \date{}
 
 
